--- a/fastipam/templates/index.html
+++ b/fastipam/templates/index.html
@@ -3,26 +3,9 @@
 {% block content %}
 
 <main class="bd-main col-lg-6">
-    <h1 class="main-title py-4" style="font-size: 1.5rem">{{ title }}</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col">Auth Token</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th class="pt-3">Tokens</th>
-                <td>
-                    <div class="d-flex justify-content-end align-items-center">
-                        <button type="button" class="btn btn-success mx-4">Add</button>
-                        <button type="button" class="btn btn-warning">Change</button>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <h1 class="main-title py-4" style="font-size: 1.5rem">Hello <b>{{ user }}</b></h1>
 </main>
+
 <div class="col-lg-3 px-5" style="padding-top: 120px;">
     <div class="card">
         <h5 class="card-header">Log</h5>
