--- a/fastipam/templates/layout/base.html
+++ b/fastipam/templates/layout/base.html
@@ -8,19 +8,22 @@
 
     <title>{{ title }}</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="{{ url_for('static', path='/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
 </head>
 
-<body class="d-flex justify-content-start">
+<body id="page" class="d-flex justify-content-start">
+    {% if title != "Login" %}
     {% include "layout/navigation.html" %}
+    {% endif %}
 
     {% block content %}{% endblock content %}
+
+    <div id="errors"></div>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-    </script>
+<script src="{{ url_for('static', path='/bootstrap.bundle.min.js') }}"></script>
+<script src="{{ url_for('static', path='/htmx.min.js') }}"></script>
+<script src="{{ url_for('static', path='/events.js') }}"></script>
 
 </html>
