Add subnet update template

--- a/fastipam/templates/index.html
+++ b/fastipam/templates/index.html
@@ -10,7 +10,7 @@
     <div class="card">
         <h5 class="card-header">Log</h5>
         <div class="card-body">
-            <p class="card-text">Loggy log log</p>
+            <p class="card-text">Future log</p>
         </div>
     </div>
 </div>
