--- a/fastipam/templates/layout/navigation.html
+++ b/fastipam/templates/layout/navigation.html
@@ -1,7 +1,7 @@
 <header>
     <div class="sidebar">
         <div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
-            <a href="{{ url_for('index') }}"
+            <a hx-boost="true" href="{{ url_for('index') }}"
                 class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
                 <svg class="bi me-2" width="30" height="24">
                     <use xlink:href="#bootstrap"></use>
@@ -11,7 +11,7 @@
             <ul class="list-unstyled ps-0">
                 <li class="mb-1">
                     <button class="btn align-items-center rounded">
-                        <a href="{{ url_for('index') }}" style="text-decoration: none; color: black;">Home</a>
+                        <a hx-boost="true" href="{{ url_for('index') }}" style="text-decoration: none; color: black;">Home</a>
                     </button>
                 </li>
                 <li class="mb-1">
@@ -21,9 +21,8 @@
                         Admin
                     </button>
                     <div class="collapse" id="dashboard-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="#" class="link-dark rounded mx-4">Users</a></li>
-                            <li><a href="#" class="link-dark rounded mx-4">Settings</a></li>
+                        <ul hx-boost="true" class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                            <li><a href="{{ url_for('get_all_users_html') }}" class="link-dark rounded mx-4">Users</a></li>
                         </ul>
                     </div>
                 </li>
@@ -33,10 +32,8 @@
                         Network management
                     </button>
                     <div class="collapse" id="orders-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                        <ul hx-boost="true" class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                             <li><a href="{{ url_for('get_all_subnets_html') }}" class="link-dark rounded mx-4">Subnets</a></li>
-                        </ul>
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                             <li><a href="{{ url_for('get_all_hosts_html') }}" class="link-dark rounded mx-4">Hosts</a></li>
                         </ul>
                     </div>
@@ -48,8 +45,9 @@
                         Account
                     </button>
                     <div class="collapse" id="account-collapse">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="{{ url_for('logout') }}" class="link-dark rounded mx-4">Logout</a></li>
+                        <ul hx-boost="true" class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                            <li><a href="{{ url_for('get_user_me_html') }}" class="link-dark rounded mx-4">Me</a></li>
+                            <li><a hx-boost="false" href="{{ url_for('logout') }}" class="link-dark rounded mx-4">Logout</a></li>
                         </ul>
                     </div>
                 </li>
