--- a/fastipam/templates/users/partials/user-form.html
+++ b/fastipam/templates/users/partials/user-form.html
@@ -5,10 +5,10 @@
         <input type="text" name="username" id="username" class="form-control" required>
 
         <label for="email" class="form-label">Email</label>
-        <input type="email" name="email" id="email" class="form-control"></input>
+        <input type="email" name="email" id="email" class="form-control" required>
 
         <label for="password" class="form-label">Password</label>
-        <input type="password" name="password" id="location" class="form-control">
+        <input type="password" name="password" id="location" class="form-control" required>
 
         <label for="active" class="form-label">Active</label>
         <input type="checkbox" name="active" id="active" checked>
