--- a/fastipam/templates/subnets/partials/subnet-update-form.html
+++ b/fastipam/templates/subnets/partials/subnet-update-form.html
@@ -11,7 +11,7 @@
         
         <li class="list-group-item"><b>Threshold:</b><input type="number" name="threshold" id="threshold" class="form-control" value="0" min="0" max="100"></li>
 
-        <input type="submit" value="Create" class="mt-3 form-control btn btn-success">
+        <input type="submit" value="Update" class="mt-3 form-control btn btn-success">
     </ul>
 </form>
     <button hx-get="{{ url_for('get_subnet_by_id_html', id=id)}}" hx-target="#page" hx-swap="outerHTML" class="btn btn-dark">Cancel</button>
