--- a/fastipam/templates/users/partials/user-update-me-form.html
+++ b/fastipam/templates/users/partials/user-update-me-form.html
@@ -5,7 +5,7 @@
         <li class="list-group-item"><b>Email</b><input type="email" name="email" id="email" class="form-control"></li>
         <li class="list-group-item"><b>Password:</b><input type="password" name="password" id="password" class="form-control"></li>
         
-        <input type="submit" value="Create" class="mt-3 form-control btn btn-success">
+        <input type="submit" value="Update" class="mt-3 form-control btn btn-success">
     </ul>
 </form>
     <button hx-get="{{ url_for('get_user_me_html') }}" hx-target="#page" hx-swap="outerHTML" class="btn btn-dark">Cancel</button>
